<resources>
    <string name="app_name">Duetto</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Navigation -->
    <string name="navigation_home">Home</string>
    <string name="navigation_history">History</string>

    <string name="login">Login</string>
    <string name="login_success">Log in successful.</string>
    <string name="login_error">There was an error logging in.</string>

    <!-- Fragment home -->
    <string name="error_network">Can\'t connect to the network: %s</string>
    <string name="error_generic">A generic error occurred</string>

    <!-- Card currently playing -->
    <string name="overline">Currently playing</string>
    <string name="content_description">Album art</string>

    <!-- Card top genres -->
    <string name="card_top_genres_overline">Top genres</string>

    <!-- Card top tracks -->
    <string name="card_top_tracks_overline">Top tracks</string>

    <!-- Card top artists -->
    <string name="card_top_artists_overline">Top artists</string>

    <string name="play_history_date_time_format">%s\n%s</string>
</resources>