<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="me.federicopeyrani.duetto.viewmodels.HomeViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:visibility="@{viewModel.currentPlayback == null ? View.GONE : View.VISIBLE}"
                app:cardBackgroundColor="@{viewModel.currentPlaybackSwatch.rgb}"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Duetto.MediumComponent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/card_current_playback_overline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/overline"
                        android:textAppearance="?attr/textAppearanceOverline"
                        android:textColor="@{viewModel.currentPlaybackSwatch.titleTextColor}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/album_art"
                        albumArtBitmap="@{viewModel.currentPlaybackBitmap}"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:contentDescription="@string/content_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/card_current_playback_overline"
                        app:shapeAppearanceOverlay="@style/ShapeAppearance.Duetto.MediumComponent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/album_art"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/album_art"
                        app:layout_constraintTop_toTopOf="@+id/album_art">

                        <TextView
                            android:id="@+id/song_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="2"
                            android:text="@{viewModel.currentPlayback.title}"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            android:textColor="@{viewModel.currentPlaybackSwatch.titleTextColor}" />

                        <TextView
                            android:id="@+id/song_artist"
                            artists="@{viewModel.currentPlayback.artist}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:singleLine="true"
                            android:textAppearance="?attr/textAppearanceSubtitle2"
                            android:textColor="@{viewModel.currentPlaybackSwatch.bodyTextColor}" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                app:shapeAppearance="@style/ShapeAppearance.Duetto.MediumComponent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/card_top_genres_overline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/card_top_genres_overline"
                        android:textAppearance="?attr/textAppearanceOverline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <me.federicopeyrani.duetto.views.StackedBarsGraphView
                        android:id="@+id/top_genres"
                        style="@style/ShapeAppearance.Duetto.SmallComponent"
                        android:layout_width="match_parent"
                        android:layout_height="72dp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                app:shapeAppearance="@style/ShapeAppearance.Duetto.MediumComponent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/card_top_tracks_overline"
                        android:textAppearance="?attr/textAppearanceOverline" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/top_tracks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:nestedScrollingEnabled="false"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:shapeAppearance="@style/ShapeAppearance.Duetto.MediumComponent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/card_top_artists_overline"
                        android:textAppearance="?attr/textAppearanceOverline" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/top_artists"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_marginTop="16dp"
                        android:nestedScrollingEnabled="false"
                        android:orientation="vertical" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>